force-app/main/default/objects/Account/fields/abm_AccountFit__c.field-meta.xml
<CustomField>
    <fullName>abm_AccountFit__c</fullName>
    <label>abm_AccountFit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>