force-app/main/default/objects/Account/fields/ABMBuyingStage__c.field-meta.xml
<CustomField>
    <fullName>ABMBuyingStage__c</fullName>
    <label>ABMBuyingStage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>