force-app/main/default/objects/Account/fields/ABMConsiderationDate__c.field-meta.xml
<CustomField>
    <fullName>ABMConsiderationDate__c</fullName>
    <label>ABMConsiderationDate</label>
    <type>Date</type>
</CustomField>