force-app/main/default/objects/Account/fields/ABMDecisionDate__c.field-meta.xml
<CustomField>
    <fullName>ABMDecisionDate__c</fullName>
    <label>ABMDecisionDate</label>
    <type>Date</type>
</CustomField>