force-app/main/default/objects/Account/fields/ABMIntentScore__c.field-meta.xml
<CustomField>
    <fullName>ABMIntentScore__c</fullName>
    <label>ABMIntentScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>