force-app/main/default/objects/Account/fields/ABMPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>ABMPurchaseDate__c</fullName>
    <label>ABMPurchaseDate</label>
    <type>Date</type>
</CustomField>