force-app/main/default/objects/Account/fields/Account_Creation_Opportunity_Flow__c.field-meta.xml
<CustomField>
    <fullName>Account_Creation_Opportunity_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Temporary field. When account is created from opportunity, it will track the process to auto  update the end user account and reseller account fields in the opportunity object.</description>
    <inlineHelpText>Do not need to enter info unless creating account from an opportunity, which will automatically have the opportunity name entered in field.</inlineHelpText>
    <label>Flow End User  Account Creation Opp</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>