force-app/main/default/objects/Account/fields/Account_Owners_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owners_Manager__c</fullName>
    <description>In flows to add manager to opportunity team without using a query</description>
    <formula>Owner.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owners Manager</label>
    <type>Text</type>
</CustomField>