force-app/main/default/objects/Account/fields/Account_Secondary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Secondary_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Needed for CDW</description>
    <inlineHelpText>Needed for CDW</inlineHelpText>
    <label>Account Secondary Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>