force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <description>This is a test but its for Ryan&apos;s Team</description>
    <inlineHelpText>For Ryans team only</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Need to Contact</fullName>
            </value>
            <value>
                <fullName>No Opportunity</fullName>
            </value>
            <value>
                <fullName>Need to set Targets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>