force-app/main/default/objects/Account/fields/Acct_Team_Check__c.field-meta.xml
<CustomField>
    <fullName>Acct_Team_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for batch class to update the account team when industry, account type, or owner is changed</description>
    <label>Acct Team Check</label>
    <type>Checkbox</type>
</CustomField>