force-app/main/default/objects/Account/fields/ActiveSpa__c.field-meta.xml
<CustomField>
    <fullName>ActiveSpa__c</fullName>
    <label>ActiveSpa</label>
    <summaryFilterItems>
        <field>Opportunity.Quotes_Active__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>