force-app/main/default/objects/Account/fields/aliasChange__c.field-meta.xml
<CustomField>
    <fullName>aliasChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>aliasChange</label>
    <type>Checkbox</type>
</CustomField>