force-app/main/default/objects/Account/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If you select this, all categories will be automatically updated. You do not need to choose each one if you select this option.</inlineHelpText>
    <label>All</label>
    <type>Checkbox</type>
</CustomField>