force-app/main/default/objects/Account/fields/Alternate_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Account_Name__c</fullName>
    <label>Alternate Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>