force-app/main/default/objects/Account/fields/ApprovalManagerId__c.field-meta.xml
<CustomField>
    <fullName>ApprovalManagerId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApprovalManagerId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>