force-app/main/default/objects/Account/fields/ArchiveCandidate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveCandidate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean field to update from apex script when an account is an archive candidate</description>
    <label>ArchiveCandidate</label>
    <type>Checkbox</type>
</CustomField>