force-app/main/default/objects/Account/fields/assetChange__c.field-meta.xml
<CustomField>
    <fullName>assetChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>assetChange</label>
    <type>Checkbox</type>
</CustomField>