force-app/main/default/objects/Account/fields/Assigned_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>National/Etail/Retail accounts are assigned based on rep. Other accounts are assigned based on account type and territory.</inlineHelpText>
    <label>Assigned Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>