force-app/main/default/objects/Account/fields/AssignedAccount__c.field-meta.xml
<CustomField>
    <fullName>AssignedAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AssignedAccount</label>
    <type>Checkbox</type>
</CustomField>