force-app/main/default/objects/Account/fields/Auto_Create_Disti__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_Disti__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, will auto create distributors on opportunities</description>
    <label>Auto Create Disti</label>
    <type>Checkbox</type>
</CustomField>