force-app/main/default/objects/Account/fields/AV_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>AV_Lead_Source__c</fullName>
    <label>Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>