force-app/main/default/objects/Account/fields/AV_Network__c.field-meta.xml
<CustomField>
    <fullName>AV_Network__c</fullName>
    <label>AV Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>