force-app/main/default/objects/Account/fields/AV_Solutions_Partner__c.field-meta.xml
<CustomField>
    <fullName>AV_Solutions_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AV Solutions Partner</label>
    <type>Checkbox</type>
</CustomField>