force-app/main/default/objects/Account/fields/AV_Specialist_5Y_Warranty__c.field-meta.xml
<CustomField>
    <fullName>AV_Specialist_5Y_Warranty__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>AV Specialist 5Y Warranty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>