force-app/main/default/objects/Account/fields/AV_VAR_Change__c.field-meta.xml
<CustomField>
    <fullName>AV_VAR_Change__c</fullName>
    <description>date of change of account to AV or to VAR</description>
    <label>AV.VAR Change</label>
    <type>Date</type>
</CustomField>