force-app/main/default/objects/Account/fields/AV_View__c.field-meta.xml
<CustomField>
    <fullName>AV_View__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>AV View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>