force-app/main/default/objects/Account/fields/Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Group__c</fullName>
    <label>Buying Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expert</fullName>
            </value>
            <value>
                <fullName>Euronics</fullName>
            </value>
            <value>
                <fullName>RedZac</fullName>
            </value>
            <value>
                <fullName>Akcent</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
            <value>
                <fullName>PC Spezialist</fullName>
            </value>
            <value>
                <fullName>Büroring</fullName>
            </value>
            <value>
                <fullName>iTeam</fullName>
            </value>
            <value>
                <fullName>Computer Compass</fullName>
            </value>
            <value>
                <fullName>Bechtle</fullName>
            </value>
            <value>
                <fullName>Medimax</fullName>
            </value>
            <value>
                <fullName>MSH - Saturn</fullName>
            </value>
            <value>
                <fullName>MSH - MediaMarkt</fullName>
            </value>
            <value>
                <fullName>Printus</fullName>
            </value>
            <value>
                <fullName>Bureau Vallée</fullName>
            </value>
            <value>
                <fullName>Compte Partagé AD/DA</fullName>
            </value>
            <value>
                <fullName>Groupe LDLC</fullName>
            </value>
            <value>
                <fullName>MSH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>