force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>CASE(left(text(Type )  ,3), &apos;NSP&apos;, &apos;National&apos;,&apos;SPG&apos;, &apos;SPG&apos;,&apos;Dis&apos;,&apos;Distributor&apos;,&apos;Ret&apos;,&apos;Etail&apos;,&apos;LA &apos;,&apos;Latin America&apos;,&apos;End User&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>