force-app/main/default/objects/Account/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <description>Subset of Account Type when Account type = Channel Partner or Channel Reseller</description>
    <inlineHelpText>If account is a Channel Partner or Channel Reseller, please tell us which kind</inlineHelpText>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AV Integrator</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Integrator</fullName>
            </value>
            <value>
                <fullName>Digital Signage</fullName>
            </value>
            <value>
                <fullName>DMR</fullName>
            </value>
            <value>
                <fullName>E-Tail</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Manufacturer&apos;s Rep</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>VAR/SPG</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>