force-app/main/default/objects/Account/fields/Cloud_Service__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service__c</fullName>
    <label>IT Cloud Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
            <value>
                <fullName>GSuite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>