force-app/main/default/objects/Account/fields/Commercial_Display__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Displays</label>
    <type>Checkbox</type>
</CustomField>