force-app/main/default/objects/Account/fields/Community_Partner_Rep_II__c.field-meta.xml
<CustomField>
    <fullName>Community_Partner_Rep_II__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Partner Rep II</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>