force-app/main/default/objects/Account/fields/Community_Partner_User__c.field-meta.xml
<CustomField>
    <fullName>Community_Partner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Partner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>