force-app/main/default/objects/Account/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor</label>
    <type>Checkbox</type>
</CustomField>