force-app/main/default/objects/Account/fields/Contacts_in_Finch_Club__c.field-meta.xml
<CustomField>
    <fullName>Contacts_in_Finch_Club__c</fullName>
    <formula>Finch_Club_Members__c &gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts in Finch Club</label>
    <type>Checkbox</type>
</CustomField>