force-app/main/default/objects/Account/fields/Count_Of_UVS_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_UVS_Oppty__c</fullName>
    <label>Count Of UVS Oppty</label>
    <summaryFilterItems>
        <field>Opportunity.With_UVS_Products__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>