force-app/main/default/objects/Account/fields/CountofContacts__c.field-meta.xml
<CustomField>
    <fullName>CountofContacts__c</fullName>
    <label>CountofContacts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>