force-app/main/default/objects/Account/fields/CountofEmails__c.field-meta.xml
<CustomField>
    <fullName>CountofEmails__c</fullName>
    <label>CountofEmails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>