force-app/main/default/objects/Account/fields/CountofTasks__c.field-meta.xml
<CustomField>
    <fullName>CountofTasks__c</fullName>
    <label>CountofTasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>