force-app/main/default/objects/Account/fields/Create_FD_Companies_Fail__c.field-meta.xml
<CustomField>
    <fullName>Create_FD_Companies_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create FD Companies Fail</label>
    <type>Checkbox</type>
</CustomField>