force-app/main/default/objects/Account/fields/createFDCompany__c.field-meta.xml
<CustomField>
    <fullName>createFDCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>createFDCompany</label>
    <type>Checkbox</type>
</CustomField>