force-app/main/default/objects/Account/fields/DBA_and_Previous_Names__c.field-meta.xml
<CustomField>
    <fullName>DBA_and_Previous_Names__c</fullName>
    <description>Used for Searching companies that change names</description>
    <label>DBA and Previous Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>