force-app/main/default/objects/Account/fields/Dealers_View__c.field-meta.xml
<CustomField>
    <fullName>Dealers_View__c</fullName>
    <description>CMS Germany Prokject</description>
    <label>Dealers View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>