force-app/main/default/objects/Account/fields/DecisionPurchase__c.field-meta.xml
<CustomField>
    <fullName>DecisionPurchase__c</fullName>
    <formula>if(ABMDecisionDate__c &gt; today()-5 , true,
if(ABMPurchaseDate__c &gt; today()-5 ,true,
false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABMDecisionPurchase</label>
    <type>Checkbox</type>
</CustomField>