force-app/main/default/objects/Account/fields/Desktop_Virtualization__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Virtualization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desktop Virtualization</label>
    <type>Checkbox</type>
</CustomField>