force-app/main/default/objects/Account/fields/Devices_Connected__c.field-meta.xml
<CustomField>
    <fullName>Devices_Connected__c</fullName>
    <label>Devices Connected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Devices_Connected</valueSetName>
    </valueSet>
</CustomField>