force-app/main/default/objects/Account/fields/Digital_Photo_Frames__c.field-meta.xml
<CustomField>
    <fullName>Digital_Photo_Frames__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Photo Frames</label>
    <type>Checkbox</type>
</CustomField>