force-app/main/default/objects/Account/fields/Direct_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Direct_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Direct Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>