force-app/main/default/objects/Account/fields/Discoverorg_Industry__c.field-meta.xml
<CustomField>
    <fullName>Discoverorg_Industry__c</fullName>
    <description>Allows us to import the industy from discover.org without affecting territory management, spa teams, assignment rules, reports (categorized), and dashboards</description>
    <label>Discoverorg Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>