force-app/main/default/objects/Account/fields/DiscoverOrgSector__c.field-meta.xml
<CustomField>
    <fullName>DiscoverOrgSector__c</fullName>
    <label>DiscoverOrgSector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>