force-app/main/default/objects/Account/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <label>Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ND - National Distribution</fullName>
            </value>
            <value>
                <fullName>DD - District Distribution</fullName>
            </value>
            <value>
                <fullName>FD - Fulfilment Disty</fullName>
            </value>
            <value>
                <fullName>DRP - Direct Retail Partner</fullName>
            </value>
            <value>
                <fullName>VAD - Value Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>