force-app/main/default/objects/Account/fields/District_Classroom_Count__c.field-meta.xml
<CustomField>
    <fullName>District_Classroom_Count__c</fullName>
    <label>District Classroom Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>