force-app/main/default/objects/Account/fields/District_Ranking__c.field-meta.xml
<CustomField>
    <fullName>District_Ranking__c</fullName>
    <label>District Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>