force-app/main/default/objects/Account/fields/District_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>District_Student_Count__c</fullName>
    <label>District Student Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>