force-app/main/default/objects/Account/fields/DistrictId__c.field-meta.xml
<CustomField>
    <fullName>DistrictId__c</fullName>
    <description>Id for the district..distinct and external id for k-12 public education</description>
    <externalId>true</externalId>
    <inlineHelpText>Id for the district..distinct and external id for k-12 public education</inlineHelpText>
    <label>NCES District ID MasterId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>