force-app/main/default/objects/Account/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Putting this here for the Everything Channel project Jan 2010</description>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>