force-app/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <description>This formula tries to strip a website of any data that distracts from its&apos; domain name. It does not account for sub domains but does for folders that exist within the domain. It is then triggered by a workflow rule that updates a text field to better find duplicate records     
--Do Not Delete ---</description>
    <formula>left(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
  SUBSTITUTE(
   SUBSTITUTE(Website, &quot;https:&quot;, &quot;&quot;),
    &quot;http:&quot;,&quot;&quot;)
       ,&quot;//&quot;,&quot;&quot;),&quot;www.&quot;,&quot;&quot;)
        ,&quot;www1.&quot;,&quot;&quot;) , if(
     
        FIND(&quot;/&quot;, SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
  SUBSTITUTE(
   SUBSTITUTE(Website, &quot;https:&quot;, &quot;&quot;),
    &quot;http:&quot;,&quot;&quot;)
       ,&quot;//&quot;,&quot;&quot;),&quot;www.&quot;,&quot;&quot;)
        ,&quot;www1.&quot;,&quot;&quot;)
        ) &gt;0 ,
        FIND(&quot;/&quot;, SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
  SUBSTITUTE(
   SUBSTITUTE(Website, &quot;https:&quot;, &quot;&quot;),
    &quot;http:&quot;,&quot;&quot;)
       ,&quot;//&quot;,&quot;&quot;),&quot;www.&quot;,&quot;&quot;)
        ,&quot;www1.&quot;,&quot;&quot;)
        ) -1,
 len(SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
  SUBSTITUTE(
   SUBSTITUTE(Website, &quot;https:&quot;, &quot;&quot;),
    &quot;http:&quot;,&quot;&quot;)
       ,&quot;//&quot;,&quot;&quot;),&quot;www.&quot;,&quot;&quot;)
        ,&quot;www1.&quot;,&quot;&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>