force-app/main/default/objects/Account/fields/DomainName__c.field-meta.xml
<CustomField>
    <fullName>DomainName__c</fullName>
    <description>Same as formula field (which may be deprecated) but allowed to use on duplicate rules</description>
    <label>DomainName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>