force-app/main/default/objects/Account/fields/DoNotSell__c.field-meta.xml
<CustomField>
    <fullName>DoNotSell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sell</label>
    <type>Checkbox</type>
</CustomField>