force-app/main/default/objects/Account/fields/DoNotUpdateAcctTeam__c.field-meta.xml
<CustomField>
    <fullName>DoNotUpdateAcctTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tells Class account team not to update this account. It is for mostly national or high volume distribution, Reseller Accounts that the team rarely changes and there are so few we can just update manually instead of through this trigger. 

It will prevent the need to lock records for update</description>
    <label>DoNotUpdateAcctTeam</label>
    <type>Checkbox</type>
</CustomField>