force-app/main/default/objects/Account/fields/DSCORGPKG_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG_Lead_Source__c</fullName>
    <label>DSCORGPKG__Lead_Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>