force-app/main/default/objects/Account/fields/Dunn_Bradstreet_Number__c.field-meta.xml
<CustomField>
    <fullName>Dunn_Bradstreet_Number__c</fullName>
    <label>Dunn &amp; Bradstreet Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>