force-app/main/default/objects/Account/fields/Duplicate_Rule_Suppres__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Rule_Suppres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Rule Suppres</label>
    <type>Checkbox</type>
</CustomField>