force-app/main/default/objects/Account/fields/EC_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>EC_Account_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique ID for Everything Channel Accounts</inlineHelpText>
    <label>EC Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>