force-app/main/default/objects/Account/fields/Education_Duplicate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Education_Duplicate_Formula__c</fullName>
    <description>Helps determine if Education Account is likely a duplicate by looking at city state county and education type fields via trigger</description>
    <label>Education Duplicate Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>