force-app/main/default/objects/Account/fields/Education_National_Rank__c.field-meta.xml
<CustomField>
    <fullName>Education_National_Rank__c</fullName>
    <label>Education National Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>