force-app/main/default/objects/Account/fields/Education_Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Education_Portal_URL__c</fullName>
    <label>Education Portal URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>