force-app/main/default/objects/Account/fields/Education_Teachers_in_District_School__c.field-meta.xml
<CustomField>
    <fullName>Education_Teachers_in_District_School__c</fullName>
    <label>Education Teachers in District/School</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>