force-app/main/default/objects/Account/fields/Education_Type__c.field-meta.xml
<CustomField>
    <fullName>Education_Type__c</fullName>
    <label>Education Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Charter</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>