force-app/main/default/objects/Account/fields/EducationPortalURL__c.field-meta.xml
<CustomField>
    <fullName>EducationPortalURL__c</fullName>
    <formula>if( $Organization.Id != &apos;00D780000004d2r&apos;,
substitute(
$CustomMetadata.CustomerKeys__mdt.EduKey.SiteEducationSite__c&amp;right( Education_Portal_URL__c ,(len(Education_Portal_URL__c)-find(&quot;=&quot;,Education_Portal_URL__c))),&apos;viewsonicav.secure.force.com&apos;,&apos;fullsand-viewsonicav.cs16.force.com&apos;), $CustomMetadata.CustomerKeys__mdt.EduKey.SiteEducationSite__c&amp;right( Education_Portal_URL__c ,(len(Education_Portal_URL__c)-find(&quot;=&quot;,Education_Portal_URL__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EducationPortalURL</label>
    <type>Text</type>
</CustomField>