force-app/main/default/objects/Account/fields/EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>EmailDomain__c</fullName>
    <externalId>true</externalId>
    <label>EmailDomain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>