force-app/main/default/objects/Account/fields/End_User_Focus__c.field-meta.xml
<CustomField>
    <fullName>End_User_Focus__c</fullName>
    <formula>if(Focus_Account__c == true, true,
   if((text(Industry) = &apos;Education&apos; || text(Industry) = &apos;Education - Higher Education&apos;) 
      &amp;&amp; Education_National_Rank__c &lt; 1001 
&amp;&amp; not(isblank(Education_National_Rank__c)) &amp;&amp;  Education_National_Rank__c != 0, true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Focus</label>
    <type>Checkbox</type>
</CustomField>