force-app/main/default/objects/Account/fields/End_User_POS_CQ__c.field-meta.xml
<CustomField>
    <fullName>End_User_POS_CQ__c</fullName>
    <label>End User POS CQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>