force-app/main/default/objects/Account/fields/Enroll_to_ViewBoard__c.field-meta.xml
<CustomField>
    <fullName>Enroll_to_ViewBoard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enroll to myViewBoard</label>
    <type>Checkbox</type>
</CustomField>