force-app/main/default/objects/Account/fields/enterpriseAccountFocus__c.field-meta.xml
<CustomField>
    <fullName>enterpriseAccountFocus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enterpriseAccountFocus</label>
    <type>Checkbox</type>
</CustomField>