force-app/main/default/objects/Account/fields/Eval_Request__c.field-meta.xml
<CustomField>
    <fullName>Eval_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is for the quick action on eval request..it is not to be used for any other purpose. Allows creation of accounts on the VF Eval Pages. HIde from all profiles on layouts but with permissions.</description>
    <label>Eval Request</label>
    <referenceTo>Eval_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>